<resources>
    <string name="app_name">SoftwareEngineering</string>
    <string name="login">Log in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">Click to register</string>
    <string name="logout">Log out</string>
    <string name="search_tint">Wpisz nazwę składnika</string>
    <string name="product_name_title">Nazwa składnika</string>
    <string name="macros_abbr">kal / b / w / t</string>
    <string name="home_menu_title">Home</string>
    <string name="logout_menu_title">Logout</string>
    <string name="profile_menu_title">Profile</string>
    <string name="categories_menu_title">Categories</string>
    <string name="list_sets_label">Nazwa zestawu</string>
    <string name="category_list_label">Dodaj aktualne pomiary ciała</string>
    <string name="wzrost">Wzrost</string>
    <string name="height">height</string>
    <string name="height_hint">183</string>
    <string name="waga">Waga</string>
    <string name="weight_hint">72</string>
    <string name="obwod_barkow">Obwód barków</string>
    <string name="obwod_barkow_hint">94</string>
    <string name="obwod_ramienia">Obwód ramienia</string>
    <string name="obwod_ramienia_hint">67</string>
    <string name="chest_label">Obwód klatki pierściowej</string>
    <string name="chest_hint">84</string>
    <string name="waist_label">Obwód talii</string>
    <string name="waist_hint">63</string>
    <string name="hips_label">Obwód bioder</string>
    <string name="hips_hint">47</string>
    <string name="thigh_label">Obwód ud</string>
    <string name="thigh_hint">37</string>
    <string name="calves_label">Obwód łydki</string>
    <string name="submit_button_alt">Submit Button</string>
    <string name="measurements_link_to_list">Spojrzeć na historię pomiarów</string>
    <string name="home_navigation_button_alt">Home navigation button</string>
    <string name="categories_navigation_button_alt">Categories navigation button</string>
    <string name="profile_navigation_button_alt">Profile navigation button</string>
    <string name="log_out_navigation_button_alt">Log out Navigation Button</string>
    <string name="sign_in_title">Sign in</string>
    <string name="email_label">Email</string>
    <string name="example_ex_com">example@ex.com.</string>
    <string name="password_label">Password</string>
    <string name="password_hint">qwerty123</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_new_one">Create new one</string>
    <string name="sign_up_title">Sign up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="dish_name_title">Dish Name</string>
    <string name="user_name">User Name</string>
    <string name="some_text">Some text...</string>
    <string name="_20_04_2023">20.04.2023</string>
    <string name="topic">Topic</string>
    <string name="plec_label">Płeć:</string>
    <string name="email_label_profil">Email:</string>
    <string name="nazwisko_label">Nazwisko:</string>
    <string name="imie_label">Imie:</string>
    <string name="powiadomienia_label">Powiadomienia:</string>
    <string name="avatar_profile_image_alt">Avatar profile image</string>
    <string name="edit_avatar_profile_button_alt">Edit Avatar Profile Button</string>
    <string name="time_to_consume">Time to consume</string>
    <string name="product_name">Product Name</string>
    <string name="dropdown_icon_alt">Dropdown Icon</string>
    <string name="nazwa_label">Nazwa</string>
    <string name="utworz_posilek_title">Utwórz posiłek</string>
    <string name="category_dropdown_alt">Category dropdown</string>
    <string name="wpisz_ilosc_posilku_lable">Wpisz ilość posiłku</string>
    <string name="wybierz_skladniki_btn">Wybierz składniki</string>
    <string name="wybierz_zdjecie_btn">Wybierz zdjęcie</string>
    <string name="image_of_posilek_alt">Image of posilek</string>
    <string name="spojrze_na_liste_posiilkow_link">Spojrzeć na listę posiłków</string>
    <string name="profile_image_alt">Profile image</string>
    <string name="wystaw_ocene_label">Wystaw ocenę</string>
    <string name="rating_dropdown_alt">Rating dropdown</string>
    <string name="send_comment_button_alt">Send comment button</string>
    <string name="komentarze_label">Komentarze</string>
    <string name="lista_skladnikow_label">Lista składników:</string>
    <string name="dish_image_alt">Dish image</string>
    <string name="p">p</string>
    <string name="kcal">kcal</string>
    <string name="c">c</string>
    <string name="f">f</string>
    <string name="go_back_button_alt">Go back button</string>
    <string name="napisz_komentarz_label">Napisz komentarz</string>
    <string name="moim_zdaniem_placeholder">Moim zdaniem...</string>
    <string name="average_rating_alt">Average rating</string>
    <string name="rating_value">0</string>
    <string name="like_button">Like button</string>
    <string name="clock_button_alt">Clock button</string>
    <string name="skladniki_button_alt">Skladniki button</string>
    <string name="skladniki">Składniki</string>
    <string name="posilki">Posiłki</string>
    <string name="zestawy_button_alt">Zestawy button</string>
    <string name="zestawy">Zestawy</string>
    <string name="ulubione_button_alt">Ulubione button</string>
    <string name="ulubione">Ulubione</string>
    <string name="woda_button_alt">Woda button</string>
    <string name="woda">Woda</string>
    <string name="pomiar_ciala_alt">Pomiar ciala</string>
    <string name="pomiary_ciala">Pomiary ciała</string>
    <string name="kategorie_button_alt">Kategorie button</string>
    <string name="kategorie">Kategorie</string>
    <string name="lista_na_dzien_button_alt">Lista na dzien button</string>
    <string name="lista_na_dzien">Lista na dzień</string>
    <string name="udostepnij_button_alt">Udostepnij button</string>
    <string name="udostepnij">Udostępnij</string>
    <string name="podpowiedzi_button_alt">Podpowiedzi button</string>
    <string name="podpowiedzi">Podpowiedzi</string>
    <string name="posilki_button_alt">Posilki button</string>
    <string name="wyszukaj">Wyszukaj...</string>
    <string name="_0kcal">0kcal</string>
    <string name="_100g">100g</string>
    <string name="zero">0</string>
    <string name="ingredient_icon_alt">Ingredient Icon</string>
    <string name="tluszcz">Tłuszcz</string>
    <string name="zero_grams">0g</string>
    <string name="weglewodany">Weglewodany</string>
    <string name="remove_blocked_button_alt">Remove blocked button</string>
    <string name="remove_button_alt">Remove button</string>
    <string name="bialko">Białko</string>
    <string name="edit_blocked_button_alt">Edit Blocked Button</string>
    <string name="edit_button">Edit Button</string>
    <string name="makroelementy">Makroelementy</string>
    <string name="chart_history_icon_alt">Chart History Icon</string>
    <string name="g">| g |</string>
    <string name="kalorie">Kalorie</string>
    <string name="kcal_outline_side">| kcal |</string>
    <string-array name="menu_options">
        <item>Strona główna</item>
        <item>Składniki</item>
    </string-array>
    <string-array name="ratings">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="title_activity_chart">ChartActivity</string>
    <string name="max_kalorii">Max kalorii:</string>
    <string name="w_glewodany">Węglewodany</string>
    <string name="green_legend_circle">Green legend circle</string>
    <string name="tluszcze">Tłuszcze</string>
    <string name="textview">TextView</string>
    <string name="_120">120</string>
    <string name="mesiac">Mesiąc</string>
    <string name="postepy_dietetyczne">Postępy dietetyczne</string>
    <string name="aktualne">Aktualne</string>
    <string name="_2000">2000</string>
    <string name="wybierz_skдadniki">Wybierz składniki</string>
</resources>