<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/product_wrapper"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#A0327D68"
    android:elevation="5dp"
    android:layout_marginTop="10dp">


    <ImageView
        android:id="@+id/ingredient_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_ingredients"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:contentDescription="@string/ingredient_icon_alt" />

    <TextView
        android:id="@+id/product_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/product_name_title"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintLeft_toRightOf="@+id/ingredient_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="26dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/kalorii_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:layout_marginEnd="5dp"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            app:layout_constraintRight_toLeftOf="@id/kcal_label"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/kcal_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kcal"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/gram_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_100g"
            android:textSize="14sp"
            android:textColor="@color/white"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/kcal_label"
            android:layout_gravity="center"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/overlay_Layout"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#AA000000">

        <ImageView
            android:id="@+id/edit_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_edit"
            android:backgroundTint="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/edit_button" />

        <ImageView
            android:id="@+id/edit_nonactive_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_edit"
            android:backgroundTint="#c73650"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/edit_blocked_button_alt" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/protein_wrapper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="5dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/protein"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bialko"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/product_proteins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero_grams"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/protein" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/carbs_wrapper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintLeft_toRightOf="@+id/protein_wrapper"
            app:layout_constraintRight_toLeftOf="@+id/fat_wrapper"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/carbs_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weglewodany"
                android:textSize="12sp"
                android:textColor="@color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/product_carbs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero_grams"
                android:textSize="12sp"
                android:textColor="@color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/carbs_label" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fat_wrapper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="80dp"
            android:layout_marginTop="5dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/fat_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tluszcz"
                android:textSize="12sp"
                android:textColor="@color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/product_fats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero_grams"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fat_label" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/remove_nonactive_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginEnd="20dp"
            android:background="@drawable/ic_delete"
            android:backgroundTint="#c73650"
            android:visibility="gone"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/remove_blocked_button_alt" />

        <ImageView
            android:id="@+id/remove_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginEnd="20dp"
            android:background="@drawable/ic_delete"
            android:backgroundTint="@color/white"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/remove_button_alt" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

