<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bottom_main_page">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/search_panel"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/dark2"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/goback_btn"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_arrow_left"
                android:layout_margin="17.5dp"
                android:background="@color/transparent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <EditText
                android:id="@+id/search"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/search_tint"
                android:inputType="text"
                android:textColorHint="@color/grey"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:maxLength="30"
                android:background="@color/transparent"
                app:layout_constraintLeft_toLeftOf="@+id/goback_btn"
                android:layout_marginHorizontal="60dp"
                />

            <ImageButton
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="17.5dp"
                android:background="@color/transparent"
                android:src="@drawable/ic_menu_vertical"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/products_labels"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/dark"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/search_panel">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/greyLighter"
                android:layout_marginStart="30dp"
                android:text="@string/product_name_title"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/greyLighter"
                android:layout_marginEnd="30dp"
                android:textStyle="bold"
                android:text="@string/macros_abbr"
                android:layout_alignParentEnd="true"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/productRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="480dp"
            android:layout_marginTop="10dp"
            android:padding="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@+id/products_labels">

        </androidx.recyclerview.widget.RecyclerView>

        <RelativeLayout
            android:id="@+id/menu_panel"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageButton
                android:id="@+id/home_button"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:layout_marginHorizontal="65dp"
                android:layout_marginBottom="26dp"
                android:background="@drawable/ic_home"
                android:backgroundTint="@color/grey" />

            <TextView
                android:layout_width="84dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:layout_marginHorizontal="80dp"
                android:layout_marginBottom="12dp"
                android:text="Home"
                android:textColor="@color/grey"
                android:textSize="11sp" />

            <ImageButton
                android:id="@+id/categories_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="29dp"
                android:background="@color/transparent"
                android:backgroundTint="@color/white"
                android:src="@drawable/ic_menu_active" />

            <TextView
                android:layout_width="84dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:layout_marginBottom="12dp"
                android:text="Categories"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="11sp" />

            <ImageButton
                android:id="@+id/logout_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:layout_marginHorizontal="65dp"
                android:layout_marginBottom="33dp"
                android:background="@drawable/ic_logout"
                android:backgroundTint="@color/grey" />

            <TextView
                android:layout_width="84dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:layout_marginRight="47dp"
                android:layout_marginBottom="12dp"
                android:text="Logout"
                android:textAlignment="center"
                android:textColor="@color/grey"
                android:textSize="11sp" />
        </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>